# games101-lab

./: .gitignore  README.md
Lab1/: CMakeLists.txt  Triangle.hpp  main.cpp  rasterizer.hpp
Lab2/: CMakeLists.txt  main.cpp  rasterizer.cpp  rasterizer.hpp
Lab3/: CMakeLists.txt  Texture.hpp  Triangle.cpp  Triangle.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp
Lab4/: CMakeLists.txt  main.cpp
Lab5/: CMakeLists.txt  Object.hpp  Renderer.cpp  Renderer.hpp  Scene.hpp  Sphere.hpp  Triangle.hpp  global.hpp  main.cpp
Lab6/: BVH.cpp  BVH.hpp  Bounds3.hpp  OBJ_Loader.hpp  Ray.hpp  Renderer.cpp  Scene.cpp  Scene.hpp  Triangle.hpp  global.hpp  main.cpp
Lab7/: BVH.cpp  BVH.hpp  Bounds3.hpp  CMakeLists.txt  Material.hpp  OBJ_Loader.hpp  Renderer.cpp  Scene.cpp  Scene.hpp  Triangle.hpp  Vector.hpp  global.hpp  main.cpp
